[tool.poetry]
name = "cluster"
version = "0.1.0"
description = ""
authors = ["Joey Yu <joey@itsjoeoui.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.0.1"
celery = "^5.2.7"
fastapi = {extras = ["all"], version = "^0.91.0"}
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
